Reflect we’ll be using a configuration file in the Readme

--- a/me.frizlab.apple-music-to-slack.plist
+++ b/me.frizlab.apple-music-to-slack.plist
@@ -2,24 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>Label</key>
-    <string>me.frizlab.apple-music-to-slack</string>
-
-    <key>EnvironmentVariables</key>
-    <dict>
-        <key>SLACK_SECRET_TOKEN</key>
-        <string>xoxp-change-me-!!!!-11111111111111111111111111111111</string>
-    </dict>
-
-    <key>ProgramArguments</key>
-    <array>
-        <string>/usr/local/bin/apple-music-to-slack</string>
-    </array>
-
-    <key>RunAtLoad</key>
-    <true/>
-
-    <key>StartInterval</key>
-    <integer>10</integer> <!-- seconds -->
+	<key>Label</key>
+	<string>me.frizlab.apple-music-to-slack</string>
+	<key>ProgramArguments</key>
+	<array>
+		<string>/usr/local/bin/apple-music-to-slack</string>
+	</array>
+	<key>RunAtLoad</key>
+	<true/>
+	<key>StartInterval</key>
+	<integer>10</integer>
 </dict>
 </plist>
